syntax = "proto3";

package proxyqueue.v1;

option go_package = "go.sazak.io/proxyqueue/gen/proxyqueue/v1;proxyqueuev1";

import "google/protobuf/timestamp.proto";

message SubmitURLRequest {
  string url = 1;
  optional string user_agent = 2;
  bool use_random_user_agent = 3;
  bool binary_content = 4;
  map<string, string> headers = 5;
}

message SubmitURLResponse {
  string id = 1;
  string url = 2;
  string html_content = 5;
  bytes binary_content = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp started_at = 8;
  google.protobuf.Timestamp finished_at = 9;
}

service ProxyQueueService {
  rpc SubmitURL(SubmitURLRequest) returns (SubmitURLResponse) {}
}